--- a/Frontend/Web/components/auth/register.html
+++ b/Frontend/Web/components/auth/register.html
@@ -53,7 +53,13 @@
       </div>
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-primary" v-on:click="register">Sign up</button>
+      <div class="p-3" v-if="loading">
+        <div class="spinner-border" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
+      </div>
+
+      <button type="button" class="btn btn-primary" v-on:click="register" v-else>Sign up</button>
     </div>
   </div>
 </div>
