--- a/Frontend/Web/components/explore.html
+++ b/Frontend/Web/components/explore.html
@@ -57,9 +57,9 @@
                             {{ contentType }}
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="explore-dropdown">
-                            <li><a class="dropdown-item" v-on:click="contentType = 'Tweets'">Tweets</a></li>
-                            <li><a class="dropdown-item" v-on:click="contentType = 'Likes'">Likes</a></li>
-                            <li><a class="dropdown-item" v-on:click="contentType = 'Retweets'">Retweets</a></li>
+                            <li><a class="dropdown-item" v-on:click="contentType = 'Tweets'" href="#">Tweets</a></li>
+                            <li><a class="dropdown-item" v-on:click="contentType = 'Likes'" href="#">Likes</a></li>
+                            <li><a class="dropdown-item" v-on:click="contentType = 'Retweets'" href="#">Retweets</a></li>
                         </ul>
                     </div>
 
@@ -79,32 +79,37 @@
         </div>
 
         <div class="col-4">
-            <div class="container p-3 border-bottom bg-light">
+            <div class="container-fluid p-3 border-bottom bg-light">
                 <h5>Recommended</h5>
-                <user-info v-for="user in appUser.recommended" v-bind:key="user.id" v-bind:user="user"
-                    v-bind:app-user="appUser"></user-info>
-            </div>
-
-            <div class="dropdown pt-3">
-                <button class="btn btn-success dropdown-toggle" type="button" id="explore-followers-dropdown"
-                    data-bs-toggle="dropdown" aria-expanded="false">
-                    {{ followerType }}
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="explore-followers-dropdown">
-                    <li><a class="dropdown-item" v-on:click="followerType = 'Followers'" href="#">Followers</a></li>
-                    <li><a class="dropdown-item" v-on:click="followerType = 'Following'" href="#">Following</a></li>
-                </ul>
-            </div>
-
-            <div class="bg-light">
-                <div class="container p-3 bg-light">
-                    <div class="d-flex justify-content-center" v-if="getFollowers().length == 0">
-                        <h5>No content</h5>
-                    </div>
-
-                    <user-info v-else v-for="user in getFollowers()" v-bind:key="user.id" v-bind:user="user"
+                <div class="row align-items-center">
+                    <user-info v-for="user in appUser.recommended" v-bind:key="user.id" v-bind:user="user"
                         v-bind:app-user="appUser">
                     </user-info>
+                </div>
+            </div>
+
+            <div v-if="selectedUser.id != null">
+                <div class="dropdown pt-3">
+                    <button class="btn btn-success dropdown-toggle" type="button" id="explore-followers-dropdown"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        {{ followerType }}
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="explore-followers-dropdown">
+                        <li><a class="dropdown-item" v-on:click="followerType = 'Followers'" href="#">Followers</a></li>
+                        <li><a class="dropdown-item" v-on:click="followerType = 'Following'" href="#">Following</a></li>
+                    </ul>
+                </div>
+
+                <div class="bg-light">
+                    <div class="container p-3 bg-light">
+                        <div class="d-flex justify-content-center" v-if="getFollowers().length == 0">
+                            <h5>No content</h5>
+                        </div>
+
+                        <user-info v-else v-for="user in getFollowers()" v-bind:key="user.id" v-bind:user="user"
+                            v-bind:app-user="appUser">
+                        </user-info>
+                    </div>
                 </div>
             </div>
         </div>
