--- a/Frontend/Web/components/home.html
+++ b/Frontend/Web/components/home.html
@@ -16,21 +16,39 @@
         </div>
       </div>
 
-      <div class="bg-light">
+      <div class="d-flex justify-content-center p-5" v-if="entries.data.length == 0">
+        <div class="spinner-border" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
+      </div>
+
+      <div class="bg-light" v-else>
         <div class="container p-3 bg-light">
           <tweet v-for="entry in entries.data" v-bind:key="entry.id" v-bind:entry="entry" v-bind:user="appUser"
             v-bind:show-retweets="false"></tweet>
           </tweet>
+
+          <div class="d-flex justify-content-center p-3">
+            <button type="button" class="btn btn-light" v-on:click="entries.load()">Load more</button>
+          </div>
         </div>
       </div>
     </div>
 
     <div class="col-4">
-      <div class="container-fluid p-3 border-bottom bg-light">
-        <h5>Recommended</h5>
-        <div class="row align-items-center">
-          <user-info v-for="user in appUser.recommended" v-bind:key="user.id" v-bind:user="user" v-bind:app-user="appUser">
-          </user-info>
+        <div class="container-fluid p-3 border-bottom bg-light">
+          <h5>Recommended</h5>
+
+          <div class="d-flex justify-content-center p-5" v-if="appUser.recommended.length == 0">
+            <div class="spinner-border" role="status">
+              <span class="visually-hidden">Loading...</span>
+            </div>
+          </div>
+
+          <div class="row align-items-center" v-else>
+            <user-info v-for="user in appUser.recommended" v-bind:key="user.id" v-bind:user="user"
+              v-bind:app-user="appUser">
+            </user-info>
         </div>
       </div>
     </div>
