--- a/Frontend/Web/components/profile/edit-profile.html
+++ b/Frontend/Web/components/profile/edit-profile.html
@@ -35,7 +35,16 @@
 
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary" v-on:click="save">Save</button>
+
+                <div class="p-3" v-if="loading">
+                    <div class="spinner-border" role="status">
+                        <span class="visually-hidden">Loading...</span>
+                    </div>
+                </div>
+
+                <button type="button" class="btn btn-primary" v-on:click="post" v-else>Save</button>
+
             </div>
         </div>
     </div>
+</div>
