--- a/Frontend/Web/components/home.html
+++ b/Frontend/Web/components/home.html
@@ -8,7 +8,7 @@
     <div class="col-5 bg-light">
       <div class="p-3 border-bottom bg-light" v-if="appUser.logged">
         <textarea type="text" style="resize: none; overflow: hidden;" id="post" class="form-control" maxlength="256"
-          placeholder="What's happening?" v-model="text"
+          placeholder="What's happening?" v-model="text" v-on:keydown.enter="post"
           oninput='this.style.height = "";this.style.height = this.scrollHeight + "px"'></textarea>
 
         <div class="d-flex p-2" v-if="text.length > 0">
