--- a/Frontend/Web/components/nav.html
+++ b/Frontend/Web/components/nav.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-  <div class="container-fluid">
+  <div class="container">
     <a class="navbar-brand">AspTwitter</a>
 
     <div class="collapse navbar-collapse" id="navbar">
