--- a/Frontend/Web/components/profile/delete-profile.html
+++ b/Frontend/Web/components/profile/delete-profile.html
@@ -4,7 +4,7 @@
             <h5 class="modal-title">Delete profile</h5>
         </div>
         <div class="modal-body">
-            Are you certain you want to delete your profile?
+            Are you certain you want to delete your profile? <br> All your data, including your tweets, will be deleted
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-primary" v-on:click="close">Cancel</button>
