--- a/Backend/Views/_Layout.cshtml
+++ b/Backend/Views/_Layout.cshtml
@@ -18,7 +18,7 @@
                     <a class="nav-link text-light" style="font-size: x-large;" asp-area="" asp-controller="Admin" asp-action="Entries">Entries</a>
                 </nav>
             </div>
-            <div class="col-11 bg-light">
+            <div class="col-11 bg-white">
                 <main role="main">
                     @RenderBody()
                 </main>
