--- a/Frontend/Web/components/explore.html
+++ b/Frontend/Web/components/explore.html
@@ -7,7 +7,8 @@
         <!--Search column-->
         <div class="col-5 bg-light">
             <form id="search-form" class="d-flex p-3">
-                <input class="form-control me-2" id="search-bar" v-on:keydown.enter="sendQuery" placeholder="Search" aria-label="Search">
+                <input class="form-control me-2" id="search-bar" v-on:keydown.enter="sendQuery" placeholder="Search"
+                    aria-label="Search">
                 <button class="btn btn-success" type="button" v-on:click="sendQuery">Search</button>
             </form>
 
@@ -59,7 +60,8 @@
                         <ul class="dropdown-menu" aria-labelledby="explore-dropdown">
                             <li><a class="dropdown-item" v-on:click="contentType = 'Tweets'" href="#">Tweets</a></li>
                             <li><a class="dropdown-item" v-on:click="contentType = 'Likes'" href="#">Likes</a></li>
-                            <li><a class="dropdown-item" v-on:click="contentType = 'Retweets'" href="#">Retweets</a></li>
+                            <li><a class="dropdown-item" v-on:click="contentType = 'Retweets'" href="#">Retweets</a>
+                            </li>
                         </ul>
                     </div>
 
@@ -79,36 +81,38 @@
         </div>
 
         <div class="col-4">
-            <div class="container-fluid p-3 border-bottom bg-light">
-                <h5>Recommended</h5>
-                <div class="row align-items-center">
+            <div class="flex-column position-fixed">
+                <div class="p-3 bg-light">
+                    <h5>Recommended</h5>
                     <user-info v-for="user in appUser.recommended" v-bind:key="user.id" v-bind:user="user"
                         v-bind:app-user="appUser">
                     </user-info>
                 </div>
-            </div>
 
-            <div v-if="selectedUser.id != null">
-                <div class="dropdown pt-3">
-                    <button class="btn btn-success dropdown-toggle" type="button" id="explore-followers-dropdown"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        {{ followerType }}
-                    </button>
-                    <ul class="dropdown-menu" aria-labelledby="explore-followers-dropdown">
-                        <li><a class="dropdown-item" v-on:click="followerType = 'Followers'" href="#">Followers</a></li>
-                        <li><a class="dropdown-item" v-on:click="followerType = 'Following'" href="#">Following</a></li>
-                    </ul>
-                </div>
+                <div v-if="selectedUser.id != null">
+                    <div class="dropdown pt-3">
+                        <button class="btn btn-success dropdown-toggle" type="button" id="explore-followers-dropdown"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            {{ followerType }}
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="explore-followers-dropdown">
+                            <li><a class="dropdown-item" v-on:click="followerType = 'Followers'" href="#">Followers</a>
+                            </li>
+                            <li><a class="dropdown-item" v-on:click="followerType = 'Following'" href="#">Following</a>
+                            </li>
+                        </ul>
+                    </div>
 
-                <div class="bg-light">
-                    <div class="container p-3 bg-light">
-                        <div class="d-flex justify-content-center" v-if="getFollowers().length == 0">
-                            <h5>No content</h5>
+                    <div class="bg-light">
+                        <div class="container p-3 bg-light">
+                            <div class="d-flex justify-content-center" v-if="getFollowers().length == 0">
+                                <h5>No content</h5>
+                            </div>
+
+                            <user-info v-else v-for="user in getFollowers()" v-bind:key="user.id" v-bind:user="user"
+                                v-bind:app-user="appUser">
+                            </user-info>
                         </div>
-
-                        <user-info v-else v-for="user in getFollowers()" v-bind:key="user.id" v-bind:user="user"
-                            v-bind:app-user="appUser">
-                        </user-info>
                     </div>
                 </div>
             </div>
