--- a/Backend/Views/_Layout.cshtml
+++ b/Backend/Views/_Layout.cshtml
@@ -14,6 +14,7 @@
                 <nav class="nav flex-column position-fixed">
                     <a class="nav-link disabled text-info" style="font-size: xx-large;" aria-disabled="true">Admin</a>
                     <a class="nav-link text-light" style="font-size: x-large;" asp-area="" asp-controller="Admin" asp-action="Home">Home</a>
+                    <a class="nav-link text-light" style="font-size: x-large;" asp-area="" asp-controller="Admin" asp-action="Apps">Apps</a>
                     <a class="nav-link text-light" style="font-size: x-large;" asp-area="" asp-controller="Admin" asp-action="Users">Users</a>
                     <a class="nav-link text-light" style="font-size: x-large;" asp-area="" asp-controller="Admin" asp-action="Entries">Entries</a>
                 </nav>
