--- a/Backend/Views/_Layout.cshtml
+++ b/Backend/Views/_Layout.cshtml
@@ -12,9 +12,8 @@
         <div class="row" style="height: 100vh;">
             <div class="col-1 bg-dark">
                 <nav class="nav flex-column position-fixed">
-                    <a class="nav-link text-info" style="font-size: xx-large;" asp-controller="Admin" asp-action="ToClient">Admin</a>
+                    <a class="nav-link text-info" style="font-size: xx-large;">Admin</a>
                     <a class="nav-link text-light" style="font-size: x-large;" asp-area="" asp-controller="Admin" asp-action="Home">Home</a>
-                    <a class="nav-link text-light" style="font-size: x-large;" asp-area="" asp-controller="Admin" asp-action="Apps">Apps</a>
                     <a class="nav-link text-light" style="font-size: x-large;" asp-area="" asp-controller="Admin" asp-action="Users">Users</a>
                     <a class="nav-link text-light" style="font-size: x-large;" asp-area="" asp-controller="Admin" asp-action="Entries">Entries</a>
                 </nav>
