--- a/Backend/Views/Admin/Users/Users.cshtml
+++ b/Backend/Views/Admin/Users/Users.cshtml
@@ -39,6 +39,7 @@
                 <th scope="col">About</th>
                 <th scope="col">Followers</th>
                 <th scope="col">Following</th>
+                <th scope="col">Comments</th>
                 <th scope="col">Actions</th>
             </tr>
         </thead>
@@ -64,6 +65,10 @@
                 <td>@user.FollowerCount</td>
                 <td>@user.FollowingCount</td>
                 <td>
+                    @user.Comments.Count Comments
+                    <a class="btn btn-link" asp-controller="Admin" asp-action="UserComments" asp-route-username="@user.Username">View</a>
+                </td>
+                <td>
                     <a class="btn btn-link" asp-controller="Admin" asp-action="CreateEntry" asp-route-username="@user.Username">Post</a>|
                     <a class="btn btn-link" asp-controller="Admin" asp-action="EditUser" asp-route-id="@user.Id">Edit</a>|
                     <a class="btn btn-link" asp-controller="Admin" asp-action="DeleteUser" asp-route-id="@user.Id">Delete</a>
@@ -73,7 +78,8 @@
         </tbody>
     </table>
 
-    <form asp-controller="Admin" asp-action="Users" method="post">
+    <form asp-controller="Admin" asp-action="Users" asp-route-search="@ViewBag.Search"
+          asp-route-orderBy="@ViewBag.Order" asp-route-ascending="@ViewBag.Ascending" method="post">
         <div class="btn-toolbar float-right pb-5" role="toolbar">
             <div class="btn-group me-2" role="group">
                 @if (ViewBag.Page == 1)
@@ -82,7 +88,8 @@
                 }
                 else
                 {
-                    <a type="button" class="btn btn-light" asp-controller="Admin" asp-action="Users" asp-route-page="@(ViewBag.Page - 1)">Previous</a>
+                    <a type="button" class="btn btn-light" asp-controller="Admin" asp-action="Users" asp-route-page="@(ViewBag.Page - 1)"asp-route-search="@ViewBag.Search"
+                    asp-route-orderBy="@ViewBag.Order" asp-route-ascending="@ViewBag.Ascending">Previous</a>
                 }
 
                 @if (ViewBag.PageCount == ViewBag.Page)
@@ -91,7 +98,8 @@
                 }
                 else
                 {
-                    <a type="button" class="btn btn-light" asp-controller="Admin" asp-action="Users" asp-route-page="@(ViewBag.Page + 1)">Next</a>
+                    <a type="button" class="btn btn-light" asp-controller="Admin" asp-action="Users" asp-route-page="@(ViewBag.Page + 1)" asp-route-search="@ViewBag.Search"
+                    asp-route-orderBy="@ViewBag.Order" asp-route-ascending="@ViewBag.Ascending">Next</a>
                 }
             </div>
             <input name="page" type="text" class="form-control w-auto" placeholder="Page number">
