--- a/Frontend/Shared/Tweet.razor
+++ b/Frontend/Shared/Tweet.razor
@@ -1,8 +1,8 @@
 ﻿@using Frontend.Models
 
-<div class="row border border-light p-3" style="background: black">
-    <div class="col-auto">
-        <img src="api/users/@entry.AuthorId/avatar" class="img rounded-circle mr-3"
+<div class="row border-bottom border-secondary p-3">
+    <div class="col-sm-1">
+        <img src="api/users/@entry.AuthorId/avatar" class="img rounded-circle"
              style="width: 50px; height: 50px; outline: none;" />
     </div>
     <div class="col-auto">
