--- a/Frontend/Shared/MainLayout.razor
+++ b/Frontend/Shared/MainLayout.razor
@@ -3,14 +3,13 @@
 @using Frontend.Models
 @using Blazored.LocalStorage
 
-@inject AppUser AppUser
+@inject AppUser appUser
 @inject ILocalStorageService localStorage
 @inject HttpClient client
 
-
 <div class="page">
     <div class="sidebar">
-        <NavMenu @ref="navMenu" />
+        <NavMenu />
     </div>
 
     <div class="main bg-dark">
@@ -20,21 +19,6 @@
     </div>
 
     <div class="col-3 bg-dark d-none d-sm-none d-md-block">
-        <Recommendations @ref="recommendations"></Recommendations>
+        <Recommendations></Recommendations>
     </div>
 </div>
-
-@code {
-    private NavMenu navMenu;
-    private Recommendations recommendations;
-
-    protected override async Task OnInitializedAsync()
-    {
-        await AppUser.Initialize(localStorage, client);
-
-        navMenu.Update();
-        await recommendations.Load();
-
-        StateHasChanged();
-    }
-} 
