--- a/Frontend/Shared/NavMenu.razor
+++ b/Frontend/Shared/NavMenu.razor
@@ -1,7 +1,7 @@
 ﻿@using Frontend.Models
 @using Blazored.LocalStorage
 
-@inject AppUser AppUser
+@inject AppUser appUser
 @inject ILocalStorageService localStorage
 @inject HttpClient client
 @inject NavigationManager NavigationManager
@@ -27,7 +27,7 @@
             </NavLink>
         </li>
 
-        @if (AppUser.Logged)
+        @if (appUser.Logged)
         {
             <li class="nav-item px-3">
                 <NavLink class="nav-link" href="profile">
@@ -36,13 +36,7 @@
             </li>
         }
 
-        @if (checkingLogin)
-        {
-            <li class="nav-item pt-5 m-3">
-                <div class="spinner-border ml-5" style="color: whitesmoke;" role="status"></div>
-            </li>
-        }
-        else if (AppUser.Logged)
+        @if (appUser.Logged)
         {
             <li class="pt-5 m-3">
                 <a type="button" class="btn btn-secondary" href="logout">
@@ -63,18 +57,11 @@
 </div>
 
 @code {
-    private bool checkingLogin = true;
-
     private bool collapseNavMenu = true;
     private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+
     private void ToggleNavMenu()
     {
-        collapseNavMenu ^= collapseNavMenu;
-    }
-
-    public void Update()
-    {
-        checkingLogin = false;
-        StateHasChanged();
+        collapseNavMenu ^= true;
     }
 }
