--- a/Frontend/Shared/ProfileHeader.razor
+++ b/Frontend/Shared/ProfileHeader.razor
@@ -1,5 +1,8 @@
-﻿@inject HttpClient client
-@inject AppUser AppUser
+﻿@using Blazored.LocalStorage
+
+@inject HttpClient client
+@inject AppUser appUser
+@inject ILocalStorageService localStorage
 
     <div class="border-bottom border-secondary p-1">
         <b style="color: white; font-size: larger">@(user.Name)</b>
@@ -10,7 +13,7 @@
         <img src="api/users/@user.Id/avatar" class="img rounded-circle"
              style="width: 100px; height: 100px; outline: none;" />
 
-        @if (user.Id == AppUser.Id)
+        @if (user.Id == appUser.Id)
         {
             <button class="btn btn-info float-right">Edit Profile</button>
         }
@@ -18,13 +21,13 @@
         {
             @if (isFollowing)
             {
-                <button class="btn btn-primary float-right" @onclick="async () => await AppUser.UnfollowUser(user, client)">
+                <button class="btn btn-primary float-right" @onclick="async () => await appUser.UnfollowUser(user, client)">
                     Following
                 </button>
             }
             else
             {
-                <button class="btn btn-outline-primary float-right" @onclick="async () => await AppUser.FollowUser(user, client)">
+                <button class="btn btn-outline-primary float-right" @onclick="async () => await appUser.FollowUser(user, client)">
                     Follow
                 </button>
             }
@@ -86,8 +89,10 @@
 
     protected override async Task OnParametersSetAsync()
     {
-        AppUser.Following = await client.GetFromJsonAsync<List<User>>($"api/users/{AppUser.Id}/following");
-
-        isFollowing = AppUser.Following.Any(e => e.Id == user.Id);
+        if (appUser.Id != 0)
+        {
+            appUser.Following = await client.GetFromJsonAsync<List<User>>($"api/users/{appUser.Id}/following");
+            isFollowing = appUser.Following.Any(e => e.Id == user.Id);
+        }
     }
 }
